[tool.poetry]
name = "python-study"
version = "0.1.0"
description = ""
authors = ["cch0807 <ckdgus11021@gmail.com>"]
readme = "README.md"
packages = [{include = "python_study"}]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
