[tool.poetry]
name = "python-study"
version = "0.1.0"
description = ""
authors = ["cch0807 <ckdgus11021@gmail.com>"]
readme = "README.md"
packages = [{include = "python_study"}]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
mypy = "^0.971"
image = "^1.5.33"
wheel = "^0.38.4"
twine = "^4.0.1"
aiohttp = "^3.8.3"


[tool.poetry.group.dev.dependencies]
black = {version = "^22.8.0", allow-prereleases = true}
Flask = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
